# Python-task

./: README.md  get_papers_list.py  pyproject.toml
get_papers/: __init__.py  fetch.py  filter.py  utils.py
tests/: test_fetch.py  test_filter.py  test_utils.py
