[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Shanu Kumar <shanu@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
